--- a/Log.web/Views/Home/Index.cshtml
+++ b/Log.web/Views/Home/Index.cshtml
@@ -15,25 +15,11 @@
     </div>
 
     <script src="/Scripts/jquery-1.9.1.js"></script>
+    <script src="/Scripts/configLog.js"></script>
     <script>
-        var host_api = 'https://localhost:44376/api/';
+
         verificaSessao();
 
-        function verificaSessao() {
-            if (localStorage.getItem("token") == null) {
-                window.location.replace('/Login');
-            } else {
-                $.post(host_api + 'Login/VerificaSessao?prToken=' + localStorage.getItem("token"), {}, function (res) {
-                    if (res.Sucesso) {
-                        if (!res.Dados.sessaoValida) {
-                            window.location.replace('/Login');
-                        } else {
-                            window.location.replace('/Dashboard');
-                        }
-                    }
-                });
-            }
-        }
     </script>
 </body>
 </html>
