--- a/Log.web/Views/Login/Index.cshtml
+++ b/Log.web/Views/Login/Index.cshtml
@@ -15,6 +15,7 @@
 
     <script src="/Scripts/jquery-1.9.1.js"></script>
     <script src="/Scripts/bootstrap.js"></script>
+    <script src="/Scripts/configLog.js"></script>
 </head>
 <body>
     <div class="row">
@@ -59,8 +60,6 @@
 
 
     <script>
-        var host_api = 'https://localhost:44376/api/';
-
         function logon() {
             var email = document.querySelectorAll('#txt_email')[0].value;
             var senha = document.querySelectorAll('#txt_senha')[0].value;
