--- a/Log.web/Content/DashboardEstilo.css
+++ b/Log.web/Content/DashboardEstilo.css
@@ -24,8 +24,7 @@
         float: right;
         font-size: 20px;
         margin-right: 20px;
-        transform: scale(1);
-        transition: transform .5s;
+        position:relative;
     }
 
         body > div:nth-child(1) > div:nth-child(2) img {
