--- a/Log.web/Views/Dashboard/Index.cshtml
+++ b/Log.web/Views/Dashboard/Index.cshtml
@@ -15,6 +15,7 @@
 
     <script src="/Scripts/jquery-1.9.1.js"></script>
     <script src="/Scripts/bootstrap.js"></script>
+    <script src="/Scripts/configLog.js"></script>
 
     <!-- Flot -->
     <script src="/Content/flot/jquery.flot.js"></script>
@@ -65,15 +66,14 @@
 
 
     <script>
-        var host_api = 'https://localhost:44376/api/';
-        verificaSessao();
+        verificaSessaoDashboard();
 
         $(document).ready(function () {
             carregaLogs();
             carregaLogsGrafico();
         });
 
-        function verificaSessao() {
+        function verificaSessaoDashboard() {
             if (localStorage.getItem("token") == null) {
                 window.location.replace('/Login');
             } else {
